--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 .App {
     min-height: 100vh;
-    background-color: rgb(238, 232, 232);
+    background-color: rgb(78, 130, 234);
     margin: 5px;
   }
   
@@ -48,7 +48,7 @@
     width: 100%;
     font-size: 15px;
     border-radius: 2px;
-    border: 3px solid #98d0f1;
+    border: 3px solid #2a8fc9;
   }
   
   button.btn.btn-primary {
@@ -94,4 +94,7 @@
   
   .btn {
     margin: 10px 10px 10px 0px;
+  }
+  img.inline-block{
+    margin-left: 40px;
   }
